# sve-benchmark

./: .clang-format  CMakeLists.txt  README.md
bench/: main.cpp  matmul_bench.cpp  rmsd_bench.cpp
cmake/modules/: FindClangFormat.cmake
include/: matmul.hpp  rmsd.hpp
